--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "gulp": "^3.8.7",
-    "gulp-tsc": "^0.9.2"
+    "gulp-plumber": "^0.6.4",
+    "gulp-tsc": "^0.9.2",
   }
 }
